<resources>
    <string name="app_name">MENTS4</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="procedure_factors">Procedure Factors</string>
    <string name="disease_factors">Disease Factors</string>
    <string name="upper_threshold">Upper Threshold</string>
    <string name="main_menu">Main Menu</string>
    <string name="patient_factors">Patient Factors</string>
    <string name="result">Result:</string>
    <string name="lower_threshold">Lower Threshold</string>
</resources>